# charts

./: .gitignore  Makefile  README.md  index.yaml
.github/workflows/: release.yml
charts/foundry/: Chart.yaml  values.yaml
charts/foundry/templates/: NOTES.txt  deployment.yaml  pvc.yaml  service.yaml
charts/life/: .helmignore  Chart.yaml  values.yaml
charts/life/templates/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  db-init-configmap.yaml  db-init-job.yaml  firebase-secret.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  oauth-secret.yaml  postgres-secret.yaml
tests/: Cargo.toml
tests/src/: helm.rs  lib.rs
tests/tests/: life_chart_tests.rs
