[package]
name = "helm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.22", features = ["v1_30"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"